2020-05-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: Rename get_item_layoutmanager()
	to submenu_listlayout(), for consistency.

2020-04-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* shortcut.C: Recognize "Enter" as a shortcut.

	* combo-box: more intelligent reporting on whether the Enter
	key did something, in a combo-box.

	* focusable_label: autofocus by default, so standard combo-boxes
	in new dialogs get input focus by default.

2020-04-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* container-><name>layout(): get_layoutmanager() shortcuts for all
	individual layout managers.

2020-04-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: keyboard navigation generates
	fake motion events so that menu popups appear on top of the current
	list item.

	* docbook/uixmldoc.xml: Optional id of <context> popups.

2020-04-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: Do not deselect the current
	element when pointer focus is lost.

	* listlayoutmanager/listlayoutstyle.C: Replace empty strings with
	newline chars, so that the list item has non-0 height.

2020-03-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox: fix tooltips in combo-boxes.

	* shortcut: Ignore '${...}' prefixes, for internationalization.

2020-03-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Border layout manager: implement update_border/update_borders.

	* textlabel_impl.C: Fix metrics calculation bug.

	* create_ok2_cancel_dialog: Add optional keyboard shortcut
	to the 2nd ok button.

2020-03-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* borderlayoutmanager_impl.C: Fix incorrect scratch buffer usage,
	resulting in inefficient scratch buffer operations.

2020-03-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* editor_impl.C: Do not invoke the autocomplete callback in response
	to a backspace or delete.

	* combobox/editable_comboboxlayoutmanager.C: Reset focus after