@@ -7,39 +7,54 @@
 #include "x/w/key_event.H"
 #include "messages.H"
 #include <x/exception.H>
+#include <x/visitor.H>
 #include <courier-unicode.h>
 #include <X11/keysym.h>
 #include <cstring>
 #include <algorithm>
+#include <functional>
 #include <charconv>
 
 LIBCXXW_NAMESPACE_START
 
-static const struct {
+namespace {
+#if 0
+}
+#endif
+
+static const struct special_keys_t {
 	uint32_t keysym;
-	const char *name;
+	char name[10];
+	char32_t usym[8];
 } special_keys[]={
-		  {XK_Left,      "Left"},
-		  {XK_KP_Left,   "KP_Left"},
-		  {XK_Right,     "Right"},
-		  {XK_KP_Right,  "KP_Right"},
-		  {XK_Up,        "Up"},
-		  {XK_KP_Up,     "KP_Up"},
-		  {XK_Down,      "Down"},
-		  {XK_KP_Down,   "KP_Down"},
-		  {XK_Delete,    "Del"},
-		  {XK_KP_Delete, "KP_Del"},
-		  {XK_Page_Up,   "PgUp"},
-		  {XK_KP_Page_Up,"KP_PgUp"},
-		  {XK_Page_Down, "PgDn"},
-		  {XK_KP_Page_Down,"KP_PgDn"},
-		  {XK_Home,      "Home"},
-		  {XK_End,       "End"},
-		  {XK_KP_Home,   "KP_Home"},
-		  {XK_KP_End,    "KP_End"},
-		  {XK_Insert,    "Ins"},
-		  {XK_KP_Insert, "KP_Ins"},
+		  // label() relies on the KP_ naming convention.
+
+		  {XK_Left,	 "Left",	U"\x2B05"},
+		  {XK_KP_Left,	 "KP_Left",	U"KP-\x2B05"},
+		  {XK_Right,	 "Right",	U"\x2B95"},
+		  {XK_KP_Right,	 "KP_Right",	U"KP-\x2B95"},
+		  {XK_Up,	 "Up",		U"\x2B06"},
+		  {XK_KP_Up,	 "KP_Up",	U"KP-\x2B06"},
+		  {XK_Down,	 "Down",	U"\x2B07"},
+		  {XK_KP_Down,   "KP_Down",	U"KP-\x2B07"},
+		  {XK_Delete,    "Del",		U"Del"},
+		  {XK_KP_Delete, "KP_Del",	U"KP-Del"},
+		  {XK_Page_Up,   "PgUp",	U"PgUp"},
+		  {XK_KP_Page_Up,"KP_PgUp",	U"KP-PgUp"},
+		  {XK_Page_Down, "PgDn",	U"PgDn"},
+		  {XK_KP_Page_Down,"KP_PgDn",	U"KP-PgDn"},
+		  {XK_Home,      "Home",	U"Home"},
+		  {XK_End,       "End",		U"End"},
+		  {XK_KP_Home,   "KP_Home",	U"KP-Home"},
+		  {XK_KP_End,    "KP_End",	U"KP-End"},
+		  {XK_Insert,    "Ins",		U"Ins"},
+		  {XK_KP_Insert, "KP_Ins",	U"KP-Ins"},
 };
+
+#if 0
+{
+#endif
+}
 
 shortcut::shortcut() : unicode(0), keysym(0)
 {
@@ -61,6 +76,18 @@ uint32_t shortcut::shortcut_keysym(uint32_t n)
 	case XK_KP_Home:   return XK_Home;
 	case XK_KP_End:    return XK_End;
 	case XK_KP_Insert: return XK_Insert;
+
+	case XK_Left:   return XK_KP_Left;
+	case XK_Right:  return XK_KP_Right;
+	case XK_Up:     return XK_KP_Up;
+	case XK_Down:   return XK_KP_Down;
+	case XK_Delete: return XK_KP_Delete;
+	case XK_Page_Up:return XK_KP_Page_Up;
+	case XK_Page_Down:return XK_KP_Page_Down;
+	case XK_Home:   return XK_KP_Home;
+	case XK_End:    return XK_KP_End;
+	case XK_Insert: return XK_KP_Insert;
+
 	default:
 		break;
 	}
@@ -161,6 +188,12 @@ shortcut::shortcut(shortcut_parse_info info)
 			return;
 		}
 
+		if (ustr == U"tab")
+		{
+			unicode='\t';
+			return;
+		}
+
 		for (const auto &sk:special_keys)
 		{
 			size_t l=strlen(sk.name);
@@ -208,55 +241,150 @@ bool shortcut::matches(const key_event &ke) const
 	return same_shortcut_modifiers(ke);
 }
 
-shortcut::operator std::u32string() const
+namespace {
+#if 0
+}
+#endif
+
+// Common logic for description() and label()
+
+struct description_or_label {
+
+	std::string s;
+
+	std::variant<std::monostate,
+		     char32_t,
+		     const special_keys_t *> result=std::monostate{};
+
+	description_or_label(const shortcut &sc);
+};
+
+description_or_label::description_or_label(const shortcut &sc)
 {
-	std::u32string s;
-
-	if (ordinal())
+	if (sc.ordinal())
 	{
-		auto mask=input_mask::operator std::string();
+		const input_mask &mask=sc;
 
-		s.insert(s.end(), mask.begin(), mask.end());
-
+		s=mask;
 		s.push_back('-');
 	}
 
-	if (unicode)
+	if (sc.unicode)
 	{
-		if (unicode == '\e')
-			s=U"Esc";
-		else if (unicode == '\n')
-			s=U"Enter";
+		if (sc.unicode == '\e')
+			s += "Esc";
+		else if (sc.unicode == '\n')
+			s += "Enter";
+		else if (sc.unicode == '\t')
+			s += "Tab";
 		else
-			s.push_back(unicode);
+		{
+			result.emplace<char32_t>(sc.unicode);
+		}
 	}
 	else
 	{
 		for (const auto &sk:special_keys)
 		{
-			if (keysym==sk.keysym)
+			if (sc.keysym==sk.keysym)
 			{
-				s.insert(s.end(),
-					 sk.name,
-					 sk.name+strlen(sk.name));
-				return s;
+				result.emplace<const special_keys_t *>(&sk);
+				return;
 			}
 		}
 
-		if (keysym < XK_F1 || keysym > XK_F35)
-			throw EXCEPTION(_("No description available for the shortcut"));
+		char buf[10];
 
-		char fkey[8]={'F'};
+		buf[0]='F';
 
-		auto ret=std::to_chars(fkey+1, fkey+6, (keysym-XK_F1+1));
+		auto n=sc.keysym;
+
+		if (n < XK_F1 || n > XK_F35)
+		{
+			buf[0]='#';
+		}
+		else
+		{
+			n = n-XK_F1+1;
+		}
+
+		auto ret=std::to_chars(buf+1, buf+sizeof(buf), n);
 
 		if (ret.ec != std::errc{})
-			throw EXCEPTION(_("Cannot convert FK number"));
+			throw EXCEPTION(_("Cannot convert keysym number"));
 
-		s.insert(s.end(), fkey, ret.ptr);
+		s += std::string{buf, ret.ptr};
 	}
+}
 
-	return s;
+#if 0
+{
+#endif
+}
+
+std::string shortcut::description() const
+{
+	description_or_label dl{*this};
+
+	std::visit(visitor{
+			[&](std::monostate)
+			{
+			},
+			[&](char32_t v)
+			{
+				char32_t c[2];
+
+				c[0]=v;
+				c[1]=0;
+
+				dl.s += unicode::iconvert::fromu
+					::convert(c,unicode::utf_8)
+					.first;
+			},
+			[&](const special_keys_t *sk)
+			{
+				dl.s += sk->name;
+			}}, dl.result);
+
+	return dl.s;
+}
+
+std::u32string shortcut::label() const
+{
+	description_or_label dl{*this};
+
+	return std::visit(visitor{
+				  [&](std::monostate) -> std::u32string
+				  {
+					  return {dl.s.begin(),
+						  dl.s.end()};
+				  },
+				  [&](char32_t v)
+				  {
+					  std::u32string s;
+
+					  s.reserve(dl.s.size()+1);
+
+					  s.insert(s.end(), dl.s.begin(),
+						   dl.s.end());
+
+					  s += v;
+
+					  return s;
+				  },
+				  [&](const special_keys_t *sk)
+				  {
+					  std::u32string s;
+					  std::u32string ss{sk->usym};
+
+					  s.reserve(dl.s.size()+ss.size());
+
+					  s.insert(s.end(), dl.s.begin(),
+						   dl.s.end());
+					  s += ss;
+
+					  return s;
+				  }}, dl.result);
 }
 
 LIBCXXW_NAMESPACE_END
